--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -31,6 +31,8 @@
   - [6.1. 相关结构体](#61-相关结构体)
   - [6.2. 创建和初始化虚拟定时器设备](#62-创建和初始化虚拟定时器设备)
   - [启动定时器](#启动定时器)
+    - [整体流程](#整体流程)
+    - [入口代码](#入口代码)
 - [7. kvmclock时钟虚拟化](#7-kvmclock时钟虚拟化)
 
 <!-- /code_chunk_output -->
@@ -836,6 +838,24 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 启用上面的定时器, 产生调用回调函数
 
+### 整体流程
+
+```cpp
+start_apic_timer()  // vcpu创建中创建lapic
+ ├─ __start_apic_timer() // lapic创建入口 
+ |   ├─ kzalloc(sizeof(*apic), GFP_KERNEL_ACCOUNT);  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
+ |   ├─ vcpu->arch.apic = apic;  // 
+ |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
+ |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer定时器
+ |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // hrtimer定时器回调函数, 即APIC Timer设备产生中断的函数
+ |   ├─ apic->lapic_timer.timer_advance_ns;  // advanced timer
+ |   └─ kvm_iodevice_init(&apic->dev, &apic_mmio_ops);  // 
+ ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
+ |   ├─ kvm_lapic_reset(vcpu, init_event); // 设置寄存器的值为默认值
+```
+
+### 入口代码
+
 ```cpp
 // arch/x86/kvm/lapic.c
 static void start_apic_timer(struct kvm_lapic *apic)
@@ -847,6 +867,7 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 {
         atomic_set(&apic->lapic_timer.pending, 0);
         // APIC timer是周期性模式或者一次性模式 并且
+        // , 直接返回
         if ((apic_lvtt_period(apic) || apic_lvtt_oneshot(apic))
             && !set_target_expiration(apic, count_reg))
                 return;
@@ -857,7 +878,7 @@ static void restart_apic_timer(struct kvm_lapic *apic)
 {
         preempt_disable();
         // 不是周期性模式 并且
-        // apic定时器有pending
+        // apic定时器有pending事件, 直接退出
         if (!apic_lvtt_period(apic) && atomic_read(&apic->lapic_timer.pending))
                 goto out;
 
@@ -865,6 +886,49 @@ static void restart_apic_timer(struct kvm_lapic *apic)
                 start_sw_timer(apic);
 out:
         preempt_enable();
+}
+
+static bool start_hv_timer(struct kvm_lapic *apic)
+{
+        // 获取apic timer
+        struct kvm_timer *ktimer = &apic->lapic_timer;
+        struct kvm_vcpu *vcpu = apic->vcpu;
+        bool expired;
+
+        WARN_ON(preemptible());
+        if (!kvm_can_use_hv_timer(vcpu))
+                return false;
+
+        if (!ktimer->tscdeadline)
+                return false;
+
+        if (kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired))
+                return false;
+
+        ktimer->hv_timer_in_use = true;
+        hrtimer_cancel(&ktimer->timer);
+
+        /*
+         * To simplify handling the periodic timer, leave the hv timer running
+         * even if the deadline timer has expired, i.e. rely on the resulting
+         * VM-Exit to recompute the periodic timer's target expiration.
+         */
+        if (!apic_lvtt_period(apic)) {
+                /*
+                 * Cancel the hv timer if the sw timer fired while the hv timer
+                 * was being programmed, or if the hv timer itself expired.
+                 */
+                if (atomic_read(&ktimer->pending)) {
+                        cancel_hv_timer(apic);
+                } else if (expired) {
+                        apic_timer_expired(apic, false);
+                        cancel_hv_timer(apic);
+                }
+        }
+
+        trace_kvm_hv_timer_state(vcpu->vcpu_id, ktimer->hv_timer_in_use);
+
+        return true;
 }
 ```
 
