--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -874,6 +874,54 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 
         restart_apic_timer(apic);
 }
+
+static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
+{
+        ktime_t now;
+        u64 tscl = rdtsc();
+        s64 deadline;
+        // 当前ktime
+        now = ktime_get();
+        apic->lapic_timer.period =
+                        tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
+
+        if (!apic->lapic_timer.period) {
+                apic->lapic_timer.tscdeadline = 0;
+                return false;
+        }
+
+        limit_periodic_timer_frequency(apic);
+        deadline = apic->lapic_timer.period;
+
+        if (apic_lvtt_period(apic) || apic_lvtt_oneshot(apic)) {
+                if (unlikely(count_reg != APIC_TMICT)) {
+                        deadline = tmict_to_ns(apic,
+                                     kvm_lapic_get_reg(apic, count_reg));
+                        if (unlikely(deadline <= 0))
+                                deadline = apic->lapic_timer.period;
+                        else if (unlikely(deadline > apic->lapic_timer.period)) {
+                                pr_info_ratelimited(
+                                    "kvm: vcpu %i: requested lapic timer restore with "
+                                    "starting count register %#x=%u (%lld ns) > initial count (%lld ns). "
+                                    "Using initial count to start timer.\n",
+                                    apic->vcpu->vcpu_id,
+                                    count_reg,
+                                    kvm_lapic_get_reg(apic, count_reg),
+                                    deadline, apic->lapic_timer.period);
+                                kvm_lapic_set_reg(apic, count_reg, 0);
+                                deadline = apic->lapic_timer.period;
+                        }
+                }
+        }
+
+        apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) +
+                nsec_to_cycles(apic->vcpu, deadline);
+        apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline);
+
+        return true;
+}
+
+
 static void restart_apic_timer(struct kvm_lapic *apic)
 {
         preempt_disable();
@@ -929,6 +977,31 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         trace_kvm_hv_timer_state(vcpu->vcpu_id, ktimer->hv_timer_in_use);
 
         return true;
+}
+
+static void start_sw_timer(struct kvm_lapic *apic)
+{
+        struct kvm_timer *ktimer = &apic->lapic_timer;
+
+        WARN_ON(preemptible());
+        if (apic->lapic_timer.hv_timer_in_use)
+                cancel_hv_timer(apic);
+        if (!apic_lvtt_period(apic) && atomic_read(&ktimer->pending))
+                return;
+
+        if (apic_lvtt_period(apic) || apic_lvtt_oneshot(apic))
+                start_sw_period(apic);
+        else if (apic_lvtt_tscdeadline(apic))
+                start_sw_tscdeadline(apic);
+        trace_kvm_hv_timer_state(apic->vcpu->vcpu_id, false);
+}
+
+static void cancel_hv_timer(struct kvm_lapic *apic)
+{
+        WARN_ON(preemptible());
+        WARN_ON(!apic->lapic_timer.hv_timer_in_use);
+        kvm_x86_ops.cancel_hv_timer(apic->vcpu);
+        apic->lapic_timer.hv_timer_in_use = false;
 }
 ```
 
