--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -857,9 +857,12 @@ start_apic_timer()  // vcpu创建中创建lapic
 ### 入口代码
 
 ```cpp
+// Timer initial counter register, timer初始计数寄存器
+#define APIC_TMICT 0x380
 // arch/x86/kvm/lapic.c
 static void start_apic_timer(struct kvm_lapic *apic)
 {
+        // APIC_TMICT 是初始计数寄存器
         __start_apic_timer(apic, APIC_TMICT);
 }
 
@@ -882,6 +885,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         s64 deadline;
         // 当前ktime
         now = ktime_get();
+        // 从
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
 
