--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -351,6 +351,7 @@ struct kvm_lapic {
         struct kvm_io_device dev;
         // APIC timer(LVT功能)
         struct kvm_timer lapic_timer;
+        // timer计数的时钟频率
         u32 divide_count;
         struct kvm_vcpu *vcpu;
         bool sw_enabled;
