--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -878,6 +878,11 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
         restart_apic_timer(apic);
 }
 
+static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
+{
+        return (u64)tmict * APIC_BUS_CYCLE_NS * (u64)apic->divide_count;
+}
+
 static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
 {
         ktime_t now;
