--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -878,8 +878,10 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
         restart_apic_timer(apic);
 }
 
+#define APIC_BUS_CYCLE_NS 1
 static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 {
+        // 根据clock时钟频率将tmict(初始计数)转换成ns单位
         return (u64)tmict * APIC_BUS_CYCLE_NS * (u64)apic->divide_count;
 }
 
