--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -28,7 +28,7 @@ Divide configuration寄存器用来**配置timer计数的时钟频率**，和tim
 
 ![config](./images/62.png)
 
-Timer的计数频率使用**system bus频率除以上图所列出来的值**，当配置使用除1时，将使用与**TSC（time\-stamp counter**）及**IA32\_FIXED\_CTR2计数器相同的计数频率**。这个寄存器的初始值为0，即使用system bus频率除以2的计数频率。
+**Timer的计数频率**使用**system bus频率除以上图所列出来的值**，当配置使用除1时，将使用与**TSC（time\-stamp counter**）及**IA32\_FIXED\_CTR2计数器相同的计数频率**。这个寄存器的初始值为0，即使用system bus频率除以2的计数频率。
 
 initial\-count与current\-count寄存器是32位寄存器，在**开始计数时**，**软件**需要在**Initial\-count（初始计数）寄存器**提供一个**非0值**的初始计数值。一旦设置初始计数值，local APIC会将**初始计数值**复制到**只读**的**current\-count（当前计数）寄存器**里。
 
