--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -870,7 +870,7 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 {
         atomic_set(&apic->lapic_timer.pending, 0);
         // APIC timer是周期性模式或者一次性模式 并且
-        // , 直接返回
+        // 设置到期时间失败的话, 直接返回
         if ((apic_lvtt_period(apic) || apic_lvtt_oneshot(apic))
             && !set_target_expiration(apic, count_reg))
                 return;
@@ -892,10 +892,11 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         s64 deadline;
         // 当前ktime
         now = ktime_get();
-        // 从
+        // 设置触发周期
+        // 即, IMICT初始计数寄存器值
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
-
+        // 如果初始计数寄存器值
         if (!apic->lapic_timer.period) {
                 apic->lapic_timer.tscdeadline = 0;
                 return false;
