--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -337,6 +337,7 @@ struct kvm_timer {
         // 定时器模式, apic timer 有3种
         u32 timer_mode;
         u32 timer_mode_mask;
+        // tscdeadline寄存器
         u64 tscdeadline;
         u64 expired_tscdeadline;
         u32 timer_advance_ns;
