--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -896,8 +896,9 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         // 即, IMICT初始计数寄存器值
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
-        // 如果初始计数寄存器值
+        // 如果初始计数寄存器值为0
         if (!apic->lapic_timer.period) {
+                // 设置tscdeadline为0, 返回false
                 apic->lapic_timer.tscdeadline = 0;
                 return false;
         }
