--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -10,6 +10,13 @@
     - [3.1. one-shot计数模式(一次性)](#31-one-shot计数模式一次性)
     - [3.2. Periodic计数模式(周期)](#32-periodic计数模式周期)
     - [3.3. TSC-deadline计数模式(到达TSC值)](#33-tsc-deadline计数模式到达tsc值)
+- [使用APIC Timer](#使用apic-timer)
+  - [使能APIC Timer](#使能apic-timer)
+  - [初始化步骤](#初始化步骤)
+  - [实现](#实现)
+  - [ASM代码示例](#asm代码示例)
+  - [C语言代码示例](#c语言代码示例)
+- [参考](#参考)
 
 <!-- /code_chunk_output -->
 
@@ -155,3 +162,265 @@ no_support：
 ![config](./images/64.png)
 
 上面是在Bochs里的运行结果，产生timer中断时在处理程序里打印出local APIC寄存器的相关信息：APIC timer使用30h中断向量号，initial\-count寄存器被设置为0x00000100值。
+
+# 使用APIC Timer
+
+## 使能APIC Timer
+
+首先，应该通过写MSR寄存器使能Local APIC硬件。
+
+其次，配置一个用于定时器的中断，并且软件开启APIC。
+
+最后，配置APIC Timer的中断向量以及操作模式。
+
+具体操作方法，参考Inter开发手册Vol3A Chapter 9。
+
+## 初始化步骤
+
+这里使用的方式是使用CPU总线频率作为基准源， 有很多种方法能够完成这部分所讲的内容，并且每种方法都不一样。例如：Real Time Clock，TimeStamp Counter，PIT or even polling CMOS registers。这里要讲的内容仍然要用到PIT，因为他很简单。按照如下步骤执行：
+
+1. 重置APIC到一个已知的状态
+2. 使能APIC Timer
+3. 重置APIC Timer的计数器
+4. 设置另外的一个已知时钟源
+5. 获取APIC TImer的计数器的当前值
+6. 以秒为基准校准一下
+7. 设置APIC Timer计数器的分频
+8. 设置接受APIC Timer中断触发
+
+APIC Timer可以被设置为经过若干个tick以后触发一次中断，这里设置的地方叫做”分频数“（divide value）。这意味着可以通过将这一数值乘以APIC Timer的计数来获得当前CPU总线的频率。这里的分频数可以设置最小值是1最大值是128，具体的请参考Intel编程手册Vol3A Chapter9.5.4。（注，网上有人说在Bochs上设置分频数为1不好用，于是他设置了16）。
+
+## 实现
+
+在开始前，我们先来定义一系列常量和函数。
+
+```cpp
+apic        = the linear address where you have mapped the APIC registers
+
+APIC_APICID = 20h
+APIC_APICVER    = 30h
+APIC_TASKPRIOR  = 80h
+APIC_EOI    = 0B0h
+APIC_LDR    = 0D0h
+APIC_DFR    = 0E0h
+APIC_SPURIOUS   = 0F0h
+APIC_ESR    = 280h
+APIC_ICRL   = 300h
+APIC_ICRH   = 310h
+APIC_LVT_TMR    = 320h
+APIC_LVT_PERF   = 340h
+APIC_LVT_LINT0  = 350h
+APIC_LVT_LINT1  = 360h
+APIC_LVT_ERR    = 370h
+APIC_TMRINITCNT = 380h
+APIC_TMRCURRCNT = 390h
+APIC_TMRDIV = 3E0h
+APIC_LAST   = 38Fh
+APIC_DISABLE    = 10000h
+APIC_SW_ENABLE  = 100h
+APIC_CPUFOCUS   = 200h
+APIC_NMI    = (4<<8)
+TMR_PERIODIC    = 20000h
+TMR_BASEDIV = (1<<20)
+
+        ;Interrupt Service Routines
+isr_dummytmr:   mov         dword [apic+APIC_EOI], 0
+        iret
+isr_spurious:   iret
+        ;function to set a specific interrupt gate in IDT
+        ;al=interrupt
+        ;ebx=isr entry point
+writegate:  ...
+        ret
+```
+
+同样的也需要配置一些IDT项，并且需要设置一个用于处理中断的中断门和处理函数。这里是：
+
+```cpp
+interrupt 32：timer, IRQ0
+interrupt 39 : spurious irq, IRQ7
+```
+
+如果有需要，那就直接改代码就好了。
+
+## ASM代码示例
+
+提供一种asm的代码示例，大家看看就好了，汇编都差不多也就两种语法，intel还有at&a我是都被祸害习惯了。
+
+```cpp
+        ;you should read MSR, get APIC base and map to "apic"
+        ;you should have used lidt properly
+
+        ;set up isrs
+        mov         al, 32
+        mov         ebx, isr_dummytmr
+        call            writegate
+        mov         al, 39
+        mov         ebx, isr_spurious
+        call            writegate
+
+        ;initialize LAPIC to a well known state
+        mov         dword [apic+APIC_DFR], 0FFFFFFFFh
+        mov         eax, dword [apic+APIC_LDR]
+        and         eax, 00FFFFFFh
+        or          al, 1
+        mov         dword [apic+APIC_LDR], eax
+        mov         dword [apic+APIC_LVT_TMR], APIC_DISABLE
+        mov         dword [apic+APIC_LVT_PERF], APIC_NMI
+        mov         dword [apic+APIC_LVT_LINT0], APIC_DISABLE
+        mov         dword [apic+APIC_LVT_LINT1], APIC_DISABLE
+        mov         dword [apic+APIC_TASKPRIOR], 0
+        ;okay, now we can enable APIC
+        ;global enable
+        mov         ecx, 1bh
+        rdmsr
+        bts         eax, 11
+        wrmsr
+        ;software enable, map spurious interrupt to dummy isr
+        mov         dword [apic+APIC_SPURIOUS], 39+APIC_SW_ENABLE
+        ;map APIC timer to an interrupt, and by that enable it in one-shot mode
+        mov         dword [apic+APIC_LVT_TMR], 32
+        ;set up divide value to 16
+        mov         dword [apic+APIC_TMRDIV], 03h
+
+        ;ebx=0xFFFFFFFF;
+        xor         ebx, ebx
+        dec         ebx
+
+        ;initialize PIT Ch 2 in one-shot mode
+        ;waiting 1 sec could slow down boot time considerably,
+        ;so we'll wait 1/100 sec, and multiply the counted ticks
+        mov         dx, 61h
+        in          al, dx
+        and         al, 0fdh
+        or          al, 1
+        out         dx, al
+        mov         al, 10110010b
+        out         43h, al
+        ;1193180/100 Hz = 11931 = 2e9bh
+        mov         al, 9bh     ;LSB
+        out         42h, al
+        in          al, 60h     ;short delay
+        mov         al, 2eh     ;MSB
+        out         42h, al
+        ;reset PIT one-shot counter (start counting)
+        in          al, dx
+        and         al, 0feh
+        out         dx, al      ;gate low
+        or          al, 1
+        out         dx, al      ;gate high
+        ;reset APIC timer (set counter to -1)
+        mov         dword [apic+APIC_TMRINITCNT], ebx
+        ;now wait until PIT counter reaches zero
+@@:     in          al, dx
+        and         al, 20h
+        jz          @b
+        ;stop APIC timer
+        mov         dword [apic+APIC_LVT_TMR], APIC_DISABLE
+        ;now do the math...
+        xor         eax, eax
+        xor         ebx, ebx
+        dec         eax
+        ;get current counter value
+        mov         ebx, dword [apic+APIC_TMRCURRCNT]
+        ;it is counted down from -1, make it positive
+        sub         eax, ebx
+        inc         eax
+        ;we used divide value different than 1, so now we have to multiply the result by 16
+        shl         eax, 4      ;*16
+        xor         edx, edx
+        ;moreover, PIT did not wait a whole sec, only a fraction, so multiply by that too
+        mov         ebx, 100    ;*PITHz
+        mul         ebx
+    ;-----edx:eax now holds the CPU bus frequency-----
+        ;now calculate timer counter value of your choice
+        ;this means that tasks will be preempted 1000 times in a second. 100 is popular too.
+        mov         ebx, 1000
+        xor         edx, edx
+        div         ebx
+        ;again, we did not use divide value of 1
+        shr         eax, 4      ;/16
+        ;sanity check, min 16
+        cmp         eax, 010h
+        jae         @f
+        mov         eax, 010h
+        ;now eax holds appropriate number of ticks, use it as APIC timer counter initializer
+@@:     mov         dword [apic+APIC_TMRINITCNT], eax
+        ;finally re-enable timer in periodic mode
+        mov         dword [apic+APIC_LVT_TMR], 32 or TMR_PERIODIC
+        ;setting divide value register again not needed by the manuals
+        ;although I have found buggy hardware that required it
+        mov         dword [apic+APIC_TMRDIV], 03h
+```
+
+## C语言代码示例
+
+```cpp
+void apic_timer_init(uint32 quantum){
+    uint32 tmp, cpubusfreq;
+
+    //set up isrs
+    writegate(32,isr_dummytmr);
+    writegate(39,isr_spurious);
+
+    //initialize LAPIC to a well known state
+    (uint32*)(apic+APIC_DFR)=0xFFFFFFFF;
+    (uint32*)(apic+APIC_LDR)=((uint32*)(apic+APIC_LDR)&0x00FFFFFF)|1);
+    (uint32*)(apic+APIC_LVT_TMR)=APIC_DISABLE;
+    (uint32*)(apic+APIC_LVT_PERF)=APIC_NMI;
+    (uint32*)(apic+APIC_LVT_LINT0)=APIC_DISABLE;
+    (uint32*)(apic+APIC_LVT_LINT1)=APIC_DISABLE;
+    (uint32*)(apic+APIC_TASKPRIOR)=0;
+
+    //okay, now we can enable APIC
+    //global enable
+    cpuSetAPICBase(cpuGetAPICBase());
+    //software enable, map spurious interrupt to dummy isr
+    (uint32*)(apic+APIC_SPURIOUS)=39|APIV_SW_ENABLE;
+    //map APIC timer to an interrupt, and by that enable it in one-shot mode
+    (uint32*)(apic+APIC_LVT_TMR)=32;
+    //set up divide value to 16
+    (uint32*)(apic+APIC_TMRDIV)=0x03;
+
+    //initialize PIT Ch 2 in one-shot mode
+    //waiting 1 sec could slow down boot time considerably,
+    //so we'll wait 1/100 sec, and multiply the counted ticks
+    outb(0x61,inb(0x61)&0xFD)|1);
+    outb(0x43,0xB2);
+    //1193180/100 Hz = 11931 = 2e9bh
+    outb(0x42,0x9B);    //LSB
+    in(0x60);   //short delay
+    outb(0x42,0x2E);    //MSB
+
+    //reset PIT one-shot counter (start counting)
+    (uint8)tmp=inb(0x61)&0xFE;
+    outb(0x61,(uint8)tmp);      //gate low
+    outb(0x61,(uint8)tmp|1);        //gate high
+    //reset APIC timer (set counter to -1)
+    (uint32*)(apic+APIC_TMRINITCNT)=0xFFFFFFFF;
+
+    //now wait until PIT counter reaches zero
+    while(!(inb(0x61)&0x20));
+
+    //stop APIC timer
+    (uint32*)(apic+APIC_LVT_TMR)=APIC_DISABLE;
+
+    //now do the math...
+    cpubusfreq=((0xFFFFFFFF-(uint32*)(apic+APIC_TMRINITCNT))+1)*16*100;
+    tmp=cpubusfreq/quantum/16;
+
+    //sanity check, now tmp holds appropriate number of ticks, use it as APIC timer counter initializer
+    (uint32*)(apic+APIC_TMRINITCNT)=(tmp<16?16:tmp);
+    //finally re-enable timer in periodic mode
+    (uint32*)(apic+APIC_LVT_TMR)=32|TMR_PERIODIC;
+    //setting divide value register again not needed by the manuals
+    //although I have found buggy hardware that required it
+    (uint32*)(apic+APIC_TMRDIV)=0x03;
+}
+```
+
+在最开始的时候我说过CPU总线频率不固定的这件事情，主要是在实测过程中会发生一些偏差，应该不算是漂移。大约在199.90~200.10MHz之间飘。这点同硬件的哥们研究过，后来得出的结果是一个叫做”自动跳频”技术造成的，好像可以关了这个就好了，具体我也没试验。只是希望别给大家带来不必要的麻烦。
+
+# 参考
+
+https://blog.csdn.net/borisjineman/article/details/51050094
