--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -877,7 +877,13 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 
         restart_apic_timer(apic);
 }
+```
 
+只有周期性/一次性模式, 才会去调用`set_target_expiration()`设置目标过期时间, 再调用`restart_apic_timer()`, 启用apic timer定时器.
+
+对于tscdeadline模式, 直接调用`restart_apic_timer()`, 启用apic timer定时器
+
+```
 #define APIC_BUS_CYCLE_NS 1
 static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 {
