--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -843,7 +843,7 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 ```cpp
 start_apic_timer()  // vcpu创建中创建lapic
  ├─ __start_apic_timer() // lapic创建入口 
- |   ├─ kzalloc(sizeof(*apic), GFP_KERNEL_ACCOUNT);  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
+ |   ├─ set_target_expiration(); // 周期性/一次性模式情况下, 需要设置到期时间
  |   ├─ vcpu->arch.apic = apic;  // 
  |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
  |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer定时器
@@ -852,6 +852,20 @@ start_apic_timer()  // vcpu创建中创建lapic
  |   └─ kvm_iodevice_init(&apic->dev, &apic_mmio_ops);  // 
  ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
  |   ├─ kvm_lapic_reset(vcpu, init_event); // 设置寄存器的值为默认值
+
+handle_io()  // io vmexit入口
+ ├─ dev->ops->write();     // pit设备的write调用
+ |   ├─ pit_ioport_write();  // 写pit io入口
+ |   |   ├─ struct kvm_pit *pit = dev_to_pit();  // 获取pit
+ |   |   ├─ pit_load_count(); // 分配irq source id
+ |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
+ |   |   └─ create_pit_timer(); // 创建pit timer定时器
+ |   |       ├─ s64 interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 计算间隔时间, 即定时器超时时间
+ |   |       ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
+ |   |       ├─ kthread_flush_work(&pit->expired); // 清理pit超时的work
+ |   |       ├─ ps->period = interval; // 设置pit的超时时间
+ |   |       ├─ ps->is_periodic = is_period; // 是否周期触发
+ |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用pit的hrtimer定时器
 ```
 
 ### 入口代码
@@ -883,7 +897,7 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 
 对于tscdeadline模式, 直接调用`restart_apic_timer()`, 启用apic timer定时器
 
-```
+```cpp
 #define APIC_BUS_CYCLE_NS 1
 static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 {
