--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -843,7 +843,13 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 ```cpp
 start_apic_timer()  // vcpu创建中创建lapic
  ├─ __start_apic_timer() // lapic创建入口 
- |   ├─ set_target_expiration(); // 周期性/一次性模式情况下, 需要设置到期时间
+ |   ├─ set_target_expiration(); // 周期性/一次性模式情况下, 需要设置到期时间, tscdeadline不会调用
+ |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
+ |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值
+ |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 设置然后返回
+ |   |   ├─ limit_periodic_timer_frequency(apic); //
+ |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
+ |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
  |   ├─ vcpu->arch.apic = apic;  // 
  |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
  |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer定时器
@@ -912,7 +918,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         s64 deadline;
         // 当前ktime
         now = ktime_get();
-        // 设置触发周期
+        // 设置触发周期时间
         // 即, IMICT初始计数寄存器值
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
