--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -843,12 +843,12 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 ```cpp
 start_apic_timer()  // vcpu创建中创建lapic
  ├─ __start_apic_timer() // lapic创建入口 
- |   ├─ set_target_expiration(); // 周期性/一次性模式情况下, 需要设置到期时间, tscdeadline不会调用
+ |   ├─ set_target_expiration(); // 设置到期时间, 在当前流程中, 周期性/一次性模式情况下, 需要 tscdeadline不会调用
  |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
  |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值
  |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 设置然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
- |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
+ |   |   ├─ deadline = apic->lapic_timer.period; // 
  |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
  |   ├─ vcpu->arch.apic = apic;  // 
  |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
@@ -911,6 +911,7 @@ static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
         return (u64)tmict * APIC_BUS_CYCLE_NS * (u64)apic->divide_count;
 }
 
+// 这个函数本身是都会调用, 不限于周期性/一次性
 static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
 {
         ktime_t now;
@@ -930,6 +931,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         }
 
         limit_periodic_timer_frequency(apic);
+        // 就是IMICT初始计数寄存器
         deadline = apic->lapic_timer.period;
 
         if (apic_lvtt_period(apic) || apic_lvtt_oneshot(apic)) {
