--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -843,9 +843,9 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 ```cpp
 start_apic_timer()  // vcpu创建中创建lapic
  ├─ __start_apic_timer() // lapic创建入口 
- |   ├─ set_target_expiration(); // 设置到期时间, 在当前流程中, 周期性/一次性模式情况下, 需要 tscdeadline不会调用
+ |   ├─ set_target_expiration(); // 设置到期时间, 在当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
  |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
- |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值
+ |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
  |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 设置然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
  |   |   ├─ deadline = apic->lapic_timer.period; // 
@@ -912,6 +912,7 @@ static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 }
 
 // 这个函数本身是都会调用, 不限于周期性/一次性
+// 根据传入的count_reg计数寄存器(apic的一个寄存器)设置到期时间
 static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
 {
         ktime_t now;
@@ -920,7 +921,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         // 当前ktime
         now = ktime_get();
         // 设置触发周期时间
-        // 即, IMICT初始计数寄存器值
+        // 即, IMICT初始计数寄存器值(转换成ns单位)
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
         // 如果初始计数寄存器值为0
@@ -929,17 +930,22 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                 apic->lapic_timer.tscdeadline = 0;
                 return false;
         }
-
+        
+        // 再往下面, 说明period即IMICT不为0, 即已经有初始计数值了
         limit_periodic_timer_frequency(apic);
-        // 就是IMICT初始计数寄存器
+        // 就是IMICT初始计数寄存器的值(只不过转换成ns单位)
         deadline = apic->lapic_timer.period;
-
+        // 周期性/一次性时
         if (apic_lvtt_period(apic) || apic_lvtt_oneshot(apic)) {
+                // 传入的不是IMICT寄存器
                 if (unlikely(count_reg != APIC_TMICT)) {
+                        // count_reg寄存器值(只不过转换成ns单位)
                         deadline = tmict_to_ns(apic,
                                      kvm_lapic_get_reg(apic, count_reg));
+                        // 小于0的话, 
                         if (unlikely(deadline <= 0))
                                 deadline = apic->lapic_timer.period;
+                        // 
                         else if (unlikely(deadline > apic->lapic_timer.period)) {
                                 pr_info_ratelimited(
                                     "kvm: vcpu %i: requested lapic timer restore with "
