--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -930,22 +930,23 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                 apic->lapic_timer.tscdeadline = 0;
                 return false;
         }
-        
+
         // 再往下面, 说明period即IMICT不为0, 即已经有初始计数值了
         limit_periodic_timer_frequency(apic);
-        // 就是IMICT初始计数寄存器的值(只不过转换成ns单位)
+        // deadline就是IMICT初始计数寄存器的值(只不过转换成ns单位)
         deadline = apic->lapic_timer.period;
         // 周期性/一次性时
         if (apic_lvtt_period(apic) || apic_lvtt_oneshot(apic)) {
                 // 传入的不是IMICT寄存器
                 if (unlikely(count_reg != APIC_TMICT)) {
-                        // count_reg寄存器值(只不过转换成ns单位)
+                        // deadline是count_reg寄存器值(只不过转换成ns单位)
                         deadline = tmict_to_ns(apic,
                                      kvm_lapic_get_reg(apic, count_reg));
-                        // 小于0的话, 
+                        // count_reg寄存器值小于0的话, 还是IMICT
                         if (unlikely(deadline <= 0))
+                                // deadline 还是 IMICT
                                 deadline = apic->lapic_timer.period;
-                        // 
+                        // count_reg寄存器值大于IMICT值, 即大于初始计数器值
                         else if (unlikely(deadline > apic->lapic_timer.period)) {
                                 pr_info_ratelimited(
                                     "kvm: vcpu %i: requested lapic timer restore with "
@@ -955,14 +956,17 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                                     count_reg,
                                     kvm_lapic_get_reg(apic, count_reg),
                                     deadline, apic->lapic_timer.period);
+                                // 设置传入的count_reg寄存器为0
                                 kvm_lapic_set_reg(apic, count_reg, 0);
+                                // deadline等于 IMICT
                                 deadline = apic->lapic_timer.period;
                         }
                 }
         }
-
+        // 
         apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) +
                 nsec_to_cycles(apic->vcpu, deadline);
+        // 到期时间
         apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline);
 
         return true;
