--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -849,7 +849,12 @@ start_apic_timer()  // vcpu创建中创建lapic
  |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 设置然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
  |   |   ├─ deadline = apic->lapic_timer.period; // 
- |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
+ |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // 
+ |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置
+ |   └─ restart_apic_timer();  // 重启定时器
+
+
+
  |   ├─ vcpu->arch.apic = apic;  // 
  |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
  |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer定时器
@@ -947,6 +952,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                                 // deadline 还是 IMICT
                                 deadline = apic->lapic_timer.period;
                         // count_reg寄存器值大于IMICT值, 即大于初始计数器值
+                        // 使用IMICT值
                         else if (unlikely(deadline > apic->lapic_timer.period)) {
                                 pr_info_ratelimited(
                                     "kvm: vcpu %i: requested lapic timer restore with "
@@ -963,10 +969,10 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                         }
                 }
         }
-        // 
+        // tscdeadline值 = tsc + deadline
         apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) +
                 nsec_to_cycles(apic->vcpu, deadline);
-        // 到期时间
+        // 到期时间 = now + deadline
         apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline);
 
         return true;
