--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -842,13 +842,13 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 ```cpp
 start_apic_timer()  // vcpu创建中创建lapic
- ├─ __start_apic_timer() // lapic创建入口 
- |   ├─ set_target_expiration(); // 设置到期时间, 在当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
+ ├─ __start_apic_timer(apic, APIC_TMICT); // lapic创建入口 
+ |   ├─ set_target_expiration(apic, count_reg); // 设置到期时间, 在当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
  |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
  |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
  |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 设置然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
- |   |   ├─ deadline = apic->lapic_timer.period; // 
+ |   |   ├─ deadline = apic->lapic_timer.period; // 等于IMICT
  |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // 
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置
  |   └─ restart_apic_timer();  // 重启定时器
@@ -896,6 +896,7 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
         atomic_set(&apic->lapic_timer.pending, 0);
         // APIC timer是周期性模式或者一次性模式 并且
         // 设置到期时间失败的话, 直接返回
+        // 当前流程 count_reg 是 APIC_TMICT
         if ((apic_lvtt_period(apic) || apic_lvtt_oneshot(apic))
             && !set_target_expiration(apic, count_reg))
                 return;
@@ -921,11 +922,12 @@ static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
 {
         ktime_t now;
+        // 读取tsc
         u64 tscl = rdtsc();
         s64 deadline;
         // 当前ktime
         now = ktime_get();
-        // 设置触发周期时间
+        // 设置触发周期时间, 临时设置
         // 即, IMICT初始计数寄存器值(转换成ns单位)
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
@@ -942,7 +944,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         deadline = apic->lapic_timer.period;
         // 周期性/一次性时
         if (apic_lvtt_period(apic) || apic_lvtt_oneshot(apic)) {
-                // 传入的不是IMICT寄存器
+                // 传入的不是IMICT寄存器, 当前流程不进入
                 if (unlikely(count_reg != APIC_TMICT)) {
                         // deadline是count_reg寄存器值(只不过转换成ns单位)
                         deadline = tmict_to_ns(apic,
