--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -80,6 +80,8 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 TSC在每个时钟信号到来时加1.
 
+TSC的主体是位于CPU里面的一个64位的TSC寄存器。每个CPU时钟周期其值加一。
+
 
 其**时钟频率**和**CPU的频率**相关, 操作系统在使用前**需要计算其频率**, 例如1GHz的TSC, 其值每纳秒增加1. 
 
