--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -342,6 +342,7 @@ struct kvm_timer {
         u64 expired_tscdeadline;
         u32 timer_advance_ns;
         s64 advance_expire_delta;
+        // 定时器的pending事件计数
         atomic_t pending;                       /* accumulated triggered timers */
         bool hv_timer_in_use;
 };
