--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -849,9 +849,10 @@ start_apic_timer()  // vcpu创建中创建lapic
  |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 设置然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
  |   |   ├─ deadline = apic->lapic_timer.period; // 等于IMICT
- |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // 
- |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置
+ |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, tsc+deadline
+ |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
  |   └─ restart_apic_timer();  // 重启定时器
+ |   |   ├─  period(apic) && pending;// 获取当前ktime
 
 
 
