--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -852,7 +852,7 @@ start_apic_timer()  // vcpu创建中创建lapic
  |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, tsc+deadline
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
  |   └─ restart_apic_timer();  // 重启定时器
- |   |   ├─  period(apic) && pending;// 获取当前ktime
+ |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式而且有pending事件, 直接返回, 不重启
 
 
 
@@ -995,6 +995,11 @@ static void restart_apic_timer(struct kvm_lapic *apic)
 out:
         preempt_enable();
 }
+```
+
+
+
+```cpp
 
 static bool start_hv_timer(struct kvm_lapic *apic)
 {
@@ -1006,7 +1011,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         WARN_ON(preemptible());
         if (!kvm_can_use_hv_timer(vcpu))
                 return false;
-
+        // tscdeadline是0
         if (!ktimer->tscdeadline)
                 return false;
 
