--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -33,6 +33,8 @@
   - [启动定时器](#启动定时器)
     - [整体流程](#整体流程)
     - [入口代码](#入口代码)
+    - [set_target_expiration(): 设置目标过期时间](#set_target_expiration-设置目标过期时间)
+    - [restart_apic_timer(): 重启apic timer定时器](#restart_apic_timer-重启apic-timer定时器)
 - [7. kvmclock时钟虚拟化](#7-kvmclock时钟虚拟化)
 
 <!-- /code_chunk_output -->
@@ -843,7 +845,7 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 ```cpp
 start_apic_timer()  // 启动apic timer定时器
  ├─ __start_apic_timer(apic, APIC_TMICT); // 传入 IMICT 初始计数寄存器
- |   ├─ set_target_expiration(apic, count_reg); // 设置到期时间, 在当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
+ |   ├─ set_target_expiration(apic, count_reg); // 设置到期时间, 当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
  |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
  |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
  |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 设置然后返回
@@ -906,9 +908,13 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 }
 ```
 
-只有周期性/一次性模式, 才会去调用`set_target_expiration()`**设置目标过期时间**, 再调用`restart_apic_timer()`, 启用apic timer定时器.
+只有**周期性/一次性**模式, 才会去调用`set_target_expiration()`**设置目标过期时间**, 再调用`restart_apic_timer()`, 启用apic timer定时器.
 
 对于tscdeadline模式, 直接调用`restart_apic_timer()`, 启用apic timer定时器
+
+### set_target_expiration(): 设置目标过期时间
+
+当前流程中, 只有**周期性/一次性**模式才调用, tscdeadline模式不调用
 
 ```cpp
 #define APIC_BUS_CYCLE_NS 1
@@ -980,8 +986,10 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
 
         return true;
 }
+```
+### restart_apic_timer(): 重启apic timer定时器
 
-
+```cpp
 static void restart_apic_timer(struct kvm_lapic *apic)
 {
         preempt_disable();
