--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -854,7 +854,7 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, tsc+deadline
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
  |   └─ restart_apic_timer();  // 重启定时器
- |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式而且有pending事件, 直接返回, 不重启
+ |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
 
 
 
@@ -1004,6 +1004,8 @@ out:
         preempt_enable();
 }
 ```
+
+如果**不是周期性模式**时(即**一次性/tscdeadline模式**), 而apic timer有pending事件, 则不重启, 直接退出.
 
 
 
