--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -492,9 +492,9 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见
 - **gsi**就是**irq号**; 
 - type是`KVM_IRQ_ROUTING_IRQCHIP`, irq芯片, 而非MSI.
-- irqchip:
-        - irqchip指明**芯片**, 有三种, pic master、pic slave和ioapic， 这里是**ioapic**
-        - pin是引脚号， 等于irq
+- irqchip中:
+    - irqchip指明**芯片**, 有三种, pic master、pic slave和ioapic, 这里是**ioapic**
+    - pin是引脚号, 等于irq
 
 所以这里的**默认中断路由项**, 一共24项, 全部是**芯片类型**(非MSI), 而且是**ioapic**, gsi和引脚都是`0-24`
 
