--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -688,14 +688,14 @@ int kvm_set_routing_entry(struct kvm *kvm,
                 case KVM_IRQCHIP_PIC_MASTER:
                         if (ue->u.irqchip.pin >= PIC_NUM_PINS / 2)
                                 return -EINVAL;
-                        // set方法
+                        // PIC的 set方法
                         e->set = kvm_set_pic_irq;
                         break;
                 // ioapic
                 case KVM_IRQCHIP_IOAPIC:
                         if (ue->u.irqchip.pin >= KVM_IOAPIC_NUM_PINS)
                                 return -EINVAL;
-                        // set 方法
+                        // ioapic的 set 方法
                         e->set = kvm_set_ioapic_irq;
                         break;
                 default:
@@ -705,6 +705,7 @@ int kvm_set_routing_entry(struct kvm *kvm,
                 break;
         // MSI类型
         case KVM_IRQ_ROUTING_MSI:
+                // MSI的set方法
                 e->set = kvm_set_msi;
                 e->msi.address_lo = ue->u.msi.address_lo;
                 e->msi.address_hi = ue->u.msi.address_hi;
@@ -735,6 +736,10 @@ int kvm_set_routing_entry(struct kvm *kvm,
 
 
 # 6. 中断注入
+
+中断注入实际是向客户机CPU注入一个事件，这个事件包括异常和外部中断和NMI。异常我们一般看作为同步，中断被认为异步。
+
+硬件具体实现就中断注入实际就是设置VMCS中字段VM-Entry interruption-infomation字段。中断注入实际在VM运行前完成的
 
 其实就是**将中断写入VMCS对应的中断信息位**，来实现中断的注入，当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
 
