--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -737,11 +737,11 @@ int kvm_set_routing_entry(struct kvm *kvm,
 
 # 6. 中断注入
 
-中断注入实际是向客户机CPU注入一个事件，这个事件包括异常和外部中断和NMI。异常我们一般看作为同步，中断被认为异步。
+中断注入实际是向客户机CPU注入一个事件，这个事件包括异常和外部中断和NMI。异常我们一般看作为同步，**中断被认为异步**。
 
-硬件具体实现就中断注入实际就是设置VMCS中字段VM-Entry interruption-infomation字段。中断注入实际在VM运行前完成的
+硬件具体实现就中断注入实际就是设置**VMCS**中字段`VM-Entry interruption-infomation`中断信息位字段。
 
-其实就是**将中断写入VMCS对应的中断信息位**，来实现中断的注入，当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
+中断注入实际在**VM运行前完成**的, 当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
 
 ## 6.1. 整体流程
 
