--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -746,12 +746,19 @@ int kvm_set_routing_entry(struct kvm *kvm,
 ## 6.1. 整体流程
 
 ```cpp
+vcpu_enter_guest() // 物理CPU进入guest模式
+ ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
+ |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi
+ ├─ kvm_x86_ops.run(vcpu) // 真正进入虚拟机模式
+ 
 kvm_set_irq()  // 中断注入入口
  ├─ kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项
  ├─ while() {  // 遍历中断路由项
  ├─ irq_set[i].set()  // 调用对应路由实体的触发函数 
  └─ } // 遍历得到的中断路由项
 ```
+
+在VM虚拟机真正运行之前
 
 ## 6.2. 入口函数: kvm_set_irq()
 
