--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1520,7 +1520,7 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
         int r;
 
         /* try to reinject previous events if any */
-
+        // 如果之前的事件
         if (vcpu->arch.exception.injected)
                 kvm_x86_ops.queue_exception(vcpu);
         /*
