--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1303,6 +1303,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                         goto out;
                 }
                 // 注入阻塞的事件，中断，异常和nmi等
+                // 注入中断在vcpu加载到真实cpu上后，相当于某些位已经被设置
                 if (inject_pending_event(vcpu) != 0)
                         req_immediate_exit = true;
                 else {
