--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1542,7 +1542,7 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
                 if (vcpu->arch.nmi_injected)
                         kvm_x86_ops.set_nmi(vcpu);
                 else if (vcpu->arch.interrupt.injected)
-                        // 中断注入
+                        // 
                         kvm_x86_ops.set_irq(vcpu);
         }
 
@@ -1611,7 +1611,9 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
                 kvm_x86_ops.set_nmi(vcpu);
         } else if (kvm_cpu_has_injectable_intr(vcpu) &&
                    kvm_x86_ops.interrupt_allowed(vcpu, true)) {
+                // 获得当前中断号, 将中断记录到vcpu中
                 kvm_queue_interrupt(vcpu, kvm_cpu_get_interrupt(vcpu), false);
+                // 写入vmcs结构中
                 kvm_x86_ops.set_irq(vcpu);
         }
 
