--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -737,9 +737,11 @@ int kvm_set_routing_entry(struct kvm *kvm,
 
 # 6. 中断注入
 
+当我们设置好虚拟中断控制器以后，接着在`KVM_RUN`退出以后，就开始遍历这些虚拟中断控制器，如果发现中断，就将中断写入中断信息位(中断注入).
+
 中断注入实际是向客户机CPU注入一个事件，这个事件包括异常和外部中断和NMI。异常我们一般看作为同步，**中断被认为异步**。
 
-硬件具体实现就中断注入实际就是设置**VMCS**中字段`VM-Entry interruption-infomation`中断信息位字段。
+硬件具体实现就是设置**VMCS**中字段`VM-Entry interruption-infomation`中断信息位字段。
 
 中断注入实际在**VM运行前完成**的, 当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
 
@@ -757,8 +759,6 @@ kvm_set_irq()  // 中断注入入口
  ├─ irq_set[i].set()  // 调用对应路由实体的触发函数 
  └─ } // 遍历得到的中断路由项
 ```
-
-在VM虚拟机真正运行之前
 
 
 ## 6.2. 入口函数: kvm_set_irq()
@@ -1426,7 +1426,7 @@ kvm_set_msi -> kvm_irq_delivery_to_apic -> kvm_apic_set_irq -> __apic_accept_irq
 
 ## 6.7. 具体注入过程
 
-当我们设置好虚拟中断控制器以后，接着在KVM_RUN退出以后，就开始遍历这些虚拟中断控制器，如果发现中断，就将中断写入中断信息位，
+
 
 在`vcpu_enter_guest` (x86.c)函数中,有这么一段代码
 
