--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1168,6 +1168,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 
                 if (kvm_x86_ops.deliver_posted_interrupt(vcpu, vector)) {
                         kvm_lapic_set_irr(vector, apic);
+                        // 请求 KVM_REQ_EVENT 事件
                         kvm_make_request(KVM_REQ_EVENT, vcpu);
                         kvm_vcpu_kick(vcpu);
                 }
