--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -638,11 +638,10 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         return 0;
 }
 ```
+
 关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
 
 ### 5.5.3. create_pit_timer(): 创建定时器
-
-注册的中断处理函数`pit_timer_fn`;
 
 ```cpp
 #define NSEC_PER_SEC 1000000000L
@@ -739,7 +738,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 
 将超时work(`&pt->expired`)添加到工作线程(`pt->worker`), 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
 
-如果定时器周期触发，则再次启动定时器，否则销毁, 详细看hrtimer的机制
+如果**定时器周期触发**，则**再次启动定时器**，否则销毁, 详细看hrtimer的机制
 
 ### 5.5.5. pit_do_work(): 时钟中断注入
 
@@ -887,6 +886,7 @@ handle_io()  // io vmexit入口
 ```cpp
 // Timer initial counter register, timer初始计数寄存器
 #define APIC_TMICT 0x380
+
 // arch/x86/kvm/lapic.c
 static void start_apic_timer(struct kvm_lapic *apic)
 {
