--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -17,16 +17,16 @@
     - [5.2.4. kvm_create_pit(): 创建pit(8254)](#524-kvm_create_pit-创建pit8254)
       - [5.2.4.1. 初始化PIT的worker和work](#5241-初始化pit的worker和work)
       - [5.2.4.2. 初始化PIT的定时器hrtimer](#5242-初始化pit的定时器hrtimer)
-      - [5.2.4.3. 重置pit](#5243-重置pit)
-  - [5.3. 注册pit设备和pio接口](#53-注册pit设备和pio接口)
-  - [5.4. pit的time tick和timer](#54-pit的time-tick和timer)
-  - [5.5. 创建定时器](#55-创建定时器)
-    - [5.5.1. 整体流程](#551-整体流程)
-    - [5.5.2. 入口代码](#552-入口代码)
-    - [5.5.3. create_pit_timer(): 创建定时器](#553-create_pit_timer-创建定时器)
-    - [5.5.4. pit_timer_fn(): 定时器中断函数](#554-pit_timer_fn-定时器中断函数)
-    - [5.5.5. pit_do_work(): 时钟中断注入](#555-pit_do_work-时钟中断注入)
-    - [5.5.6. 定时器的中断ack](#556-定时器的中断ack)
+      - [5.2.4.3. kvm_pit_reset(): 重置pit](#5243-kvm_pit_reset-重置pit)
+      - [5.2.4.4. 注册pit设备和pio接口](#5244-注册pit设备和pio接口)
+  - [5.3. pit的time tick和timer](#53-pit的time-tick和timer)
+  - [5.4. 创建定时器](#54-创建定时器)
+    - [5.4.1. 整体流程](#541-整体流程)
+    - [5.4.2. 入口代码](#542-入口代码)
+    - [5.4.3. create_pit_timer(): 创建定时器](#543-create_pit_timer-创建定时器)
+    - [5.4.4. pit_timer_fn(): 定时器中断函数](#544-pit_timer_fn-定时器中断函数)
+    - [5.4.5. pit_do_work(): 时钟中断注入](#545-pit_do_work-时钟中断注入)
+    - [5.4.6. 定时器的中断ack](#546-定时器的中断ack)
 - [6. APIC timer中断](#6-apic-timer中断)
   - [6.1. 相关结构体](#61-相关结构体)
   - [6.2. 创建和初始化虚拟定时器设备](#62-创建和初始化虚拟定时器设备)
@@ -371,7 +371,7 @@ pit_state->timer.function = pit_timer_fn;
 
 由此可见, 所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
-#### 5.2.4.3. 重置pit
+#### 5.2.4.3. kvm_pit_reset(): 重置pit
 
 ```cpp
 static void kvm_pit_reset(struct kvm_pit *pit)
@@ -465,7 +465,7 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
 
-## 5.3. 注册pit设备和pio接口
+#### 5.2.4.4. 注册pit设备和pio接口
 
 ```cpp
 #define KVM_PIT_BASE_ADDRESS 0x40
@@ -507,7 +507,7 @@ ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS,
 
 因为没有speaker, 所以看不到
 
-## 5.4. pit的time tick和timer
+## 5.3. pit的time tick和timer
 
 pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号！！！** 来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
 
@@ -515,7 +515,7 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 
 目前仅仅保留了计数器系统, 通过**时钟中断**来满足程序的**定时器需求**.
 
-## 5.5. 创建定时器
+## 5.4. 创建定时器
 
 可以看到, 因为取消了基于PIT的time tick功能, 所以前面创建PIT没有真正创建定时器.
 
@@ -532,7 +532,7 @@ static const struct kvm_io_device_ops pit_dev_ops = {
 
 在前面创建pit中初始化了pit设备的读写函数.
 
-### 5.5.1. 整体流程
+### 5.4.1. 整体流程
 
 ```cpp
 handle_io()  // io vmexit入口
@@ -552,7 +552,7 @@ handle_io()  // io vmexit入口
 
 这个是启用了定时器, 后面还有**定时器中断处理流程**以及**时钟中断注入流程**.
 
-### 5.5.2. 入口代码
+### 5.4.2. 入口代码
 
 PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> emulator_pio_out_emulated() -> emulator_pio_in_out() -> kernel_pio() -> kvm_io_bus_write() -> __kvm_io_bus_write() -> kvm_iodevice_write() -> dev->ops->write()`, 详细见PIO部分内容
 
@@ -641,7 +641,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
 
 关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
 
-### 5.5.3. create_pit_timer(): 创建定时器
+### 5.4.3. create_pit_timer(): 创建定时器
 
 ```cpp
 #define NSEC_PER_SEC 1000000000L
@@ -708,7 +708,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 pit初始化时候也注册了定时器的中断处理函数`it_state->timer.function = pit_timer_fn;`
 
-### 5.5.4. pit_timer_fn(): 定时器中断函数
+### 5.4.4. pit_timer_fn(): 定时器中断函数
 
 注册的定时器处理函数为：
 
@@ -740,7 +740,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 
 如果**定时器周期触发**，则**再次启动定时器**，否则销毁, 详细看hrtimer的机制
 
-### 5.5.5. pit_do_work(): 时钟中断注入
+### 5.4.5. pit_do_work(): 时钟中断注入
 
 当定时器将时钟中断pending增加，并且添加完工作队列以后，接着就触发下面的时钟中断注入，如果上一个中断被接收，接着触发下一个。
 
@@ -779,7 +779,7 @@ static void pit_do_work(struct kthread_work *work)
 
 `kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置**中断标志位**，然后通过`kvm_kick_vcpu`将**vcpu拉回到host**，等到**vcpu重新进入guest**时，将**中断信息**注入到**vmcs结构体**里，这样**vcpu回到guest**后就可以**处理tick中断**了。
 
-### 5.5.6. 定时器的中断ack
+### 5.4.6. 定时器的中断ack
 
 之前在pit初始化时候注册了中断ack函数, `pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;`, 它会在**中断注入以后**被**中断控制器调用**。
 
