--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -554,7 +554,7 @@ handle_io()  // io vmexit入口
 
 ### 5.4.2. 入口代码
 
-PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> emulator_pio_out_emulated() -> emulator_pio_in_out() -> kernel_pio() -> kvm_io_bus_write() -> __kvm_io_bus_write() -> kvm_iodevice_write() -> dev->ops->write()`, 详细见PIO部分内容
+PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio() -> kvm_fast_pio_out() -> emulator_pio_out_emulated() -> emulator_pio_in_out() -> kernel_pio() -> kvm_io_bus_write() -> __kvm_io_bus_write() -> kvm_iodevice_write() -> dev->ops->write()`, 详细见PIO部分内容
 
 那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
 
@@ -569,6 +569,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         int channel, access;
         struct kvm_kpit_channel_state *s;
         u32 val = *(u32 *) data;
+        // addr在
         if (!pit_in_range(addr))
                 return -EOPNOTSUPP;
 
