--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -559,6 +559,10 @@ PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio() -> kvm_
 那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
 
 ```cpp
+// arch/x86/kvm/i8254.h
+#define KVM_PIT_CHANNEL_MASK 0x3
+
+// arch/x86/kvm/i8254.c
 static int pit_ioport_write(struct kvm_vcpu *vcpu,
                                 struct kvm_io_device *this,
                             gpa_t addr, int len, const void *data)
@@ -569,7 +573,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         int channel, access;
         struct kvm_kpit_channel_state *s;
         u32 val = *(u32 *) data;
-        // addr在
+        // 判断addr范围, gpa
         if (!pit_in_range(addr))
                 return -EOPNOTSUPP;
 
@@ -639,6 +643,20 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         return 0;
 }
 ```
+
+先判断地址的范围
+
+```cpp
+#define KVM_PIT_BASE_ADDRESS 0x40
+#define KVM_PIT_MEM_LENGTH 4
+static inline int pit_in_range(gpa_t addr){
+        return ((addr >= KVM_PIT_BASE_ADDRESS) &&
+                (addr < KVM_PIT_BASE_ADDRESS + KVM_PIT_MEM_LENGTH));
+}
+```
+
+前面pit初始化时候注册的操作地址是
+
 
 关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
 
